Padding fixes on mobile

--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -64,17 +64,18 @@
     }
 
     main {
+      padding: 1.5rem;
+      width: calc(100% - 21.4575rem);
+      height: calc(100vh - 6.75rem);
       overflow: auto;
 
       @include for-size(phone-only) {
-        padding: 1rem 2rem;
         width: auto;
         height: calc(100vh - 4.125rem);
         padding: auto;
       }
 
       @include for-size(tablet-portrait-up) {
-        padding: 1rem 2rem;
         width: auto;
         height: calc(100vh - 4.125rem);
         padding: auto;
@@ -84,6 +85,7 @@
         padding: 3rem;
         width: calc(100% - 21.4575rem);
         height: calc(100vh - 6.75rem);
+        overflow: auto;
       }
     }
   }
